Signed-off-by: Mukesh Singh Rajput <mukesh.rajput@MUKESH-SINGH-RAJPUT.local>

--- a/Parameters/config.properties
+++ b/Parameters/config.properties
@@ -1,6 +1,4 @@
 ProjectName=xo
 Browser=firefox
-Environment=pp21
+Environment=staging
 ResultsDir=/xo/xo_automation/test-output
-MobileAppAutomation=true
-MobileAppName=androidApp
