--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>xo</groupId>
-  <artifactId>xo_automation</artifactId>
+  <groupId>msr5464</groupId>
+  <artifactId>AutomationFramework</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>xo_automation</name>
+  <name>AutomationFramework</name>
   <url>http://maven.apache.org</url>
 
   <properties>
