starting with Appium
Signed-off-by: Mukesh Singh Rajput <mukesh.rajput@MUKESH-SINGH-RAJPUT.local>

--- a/Parameters/config.properties
+++ b/Parameters/config.properties
@@ -1,3 +1,6 @@
 ProjectName=msr5464_Automation_Project
 Browser=firefox
 Environment=staging
+ResultsDir=/xo/xo_automation/test-output
+MobileAppAutomation=true
+MobileAppName=androidApp
