--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,15 @@
 	</dependency>
 	
 	<dependency>
-		<groupId>com.jayway.restassured</groupId>
-	    <artifactId>rest-assured</artifactId>
-	    <version>2.9.0</version>
+	  <groupId>com.jayway.restassured</groupId>
+	  <artifactId>rest-assured</artifactId>
+	  <version>2.9.0</version>
+	</dependency>
+	
+	<dependency>
+      <groupId>io.appium</groupId>
+      <artifactId>java-client</artifactId>
+      <version>4.1.2</version>
 	</dependency>
 
 	<dependency>
