--- a/Parameters/config.properties
+++ b/Parameters/config.properties
@@ -1,3 +1,3 @@
-ProjectName=msr5464_Automation_Project
-Browser=firefox
-Environment=staging
+ProjectName=Payment
+Browser=Firefox
+Environment=Staging
