Bulk changes to support mobile View
Signed-off-by: Mukesh Rajput <mukesh.rajput@go-jek.com>

--- a/Parameters/config.properties
+++ b/Parameters/config.properties
@@ -1,3 +1,11 @@
-ProjectName=Payment
-Browser=Firefox
-Environment=Staging
+ProjectName=DemoProject
+Browser=chrome
+Environment=staging
+DebugMode=false
+ObjectWaitTime=25
+MobileViewExecution=false
+MobileAppExecution=false
+MobileAppName=MobileSdk_Android
+HeadlessExecution=false
+EndExecutionOnFailure=false
+RemoteExecution=false
