Upgraded code and version
Signed-off-by: Mukesh Rajput <msr5464@gmail.com>

--- a/Parameters/config.properties
+++ b/Parameters/config.properties
@@ -1,11 +1,8 @@
-ProjectName=DemoProject
 Browser=chrome
-Environment=staging
+Environment=test
 DebugMode=false
 ObjectWaitTime=25
-MobileViewExecution=false
 MobileAppExecution=false
 MobileAppName=MobileSdk_Android
-HeadlessExecution=false
 EndExecutionOnFailure=false
 RemoteExecution=false
