upgrade code as per latest libs
Signed-off-by: Mukesh Rajput <msr5464@gmail.com>

--- a/Parameters/test.properties
+++ b/Parameters/test.properties
@@ -1,1 +1,7 @@
-ApiBaseUrl=http://testapi.t-y-w-a-r.net:3333/v1
+ApiBaseUrl=https://jsonplaceholder.typicode.com
+name=Test User
+username=testuser
+email=test@example.com
+phone=1-770-736-8031 x56442
+website=test.org
+userId=1
